# scte_rosBot

./: .gitignore  rosEnvSource  rviz_satellite
devNotes/: Netbeans_ROS_notes  Useful Linux Tweaks  ackermann  example_projects  gpsd_notes  network_notes  opengl_vm_notes  usefull_linux_tweaks
env/: config_pi_gps.sh
env/ros_stereo_image_proc/: better_disparity_image.yaml  default_settings.yaml  good_disparity_image.yaml
env/udev/: 51-garmin.rules  51-logitech.rules
launch/: scteBot.launch  scteBot_description_and_joints.launch  scteBot_localization.launch  scteBot_sensors.launch  scteBot_transform_and_localization.launch
launch/params/: ekf_settings.yaml  ekf_template.yaml
scripts/: shutdown_pi.sh  stereo_cal.sh
scte_bot_artifacts/launch/: scteBot.launch
scte_bot_control/: CMakeLists.txt  package.xml
scte_bot_control/config/: scte_steer_bot_gains.yaml
scte_bot_control/launch/: scte_control.launch  scte_localization.launch  scte_teleop_joy.launch  sctebot_rqt.launch
scte_bot_description/: CMakeLists.txt
scte_bot_description/urdf/: materials.xacro  scte_chassis.xacro  scte_front_bumper.xacro
scte_bot_gazebo/: CMakeLists.txt
scte_bot_gazebo/launch/: scte_world.launch
scte_bot_viz/: CMakeLists.txt
scte_bot_viz/launch/: scte_rviz.launch
scte_bot_viz/rviz/: scteBot.rviz
sctebot_3dmodels/: cjmu_3901_case-lid_body.stl  cjmu_3901_case-main_body.stl  cjmu_3901_case.20240324-204547.FCBak  cjmu_3901_case.20240324-205450.FCBak  cjmu_3901_case.FCStd  tutorial.txt
sctebot_artifacts/: dev_todo  project_dependancies
sctebot_artifacts/bashrc/: sctebot_amd_node_overrides  sctebot_base_environment  sctebot_dev_node_overrides
sctebot_artifacts/devNotes/: adafruit_10dof_info  cpp_dev_issues  example_projects  gpsd_notes  navigation_notes  node_building  symbolic_link_notes  ydlidar_ros
sctebot_artifacts/dev_notes/: ackermann  boost_logging  cpp_dev_issues  docker  gpsd_notes  localization_notes  multimaster  ntp_notes  raspberry_pi_tweaks  remote_ros  video_ros
sctebot_artifacts/diagrams/: .$sctebot_ros1_system.drawio.bkp  sctebot_ros1_system.drawio
sctebot_artifacts/launch/: sctebot.launch  sctebot_sensors.launch
sctebot_artifacts/scripts/: sctebot_rosbag.sh  stereo_cal.sh
sctebot_bootstrap/: CMakeLists.txt  package.xml
sctebot_bootstrap/launch/: sctebot_compute_node_bootstrap.launch  sctebot_pi_node_bootstrap.launch  sctebot_primary_node_bootstrap.launch  sctebot_ros_pi_node_bootstrap.launch  sctebot_simulation_bootstrap.launch
sctebot_circuit_python/Adafruit_CircuitPython_pmw3901_SPI/: notes  pmw3901_spi.py
sctebot_common/i2c_linux/: CMakeLists.txt  package.xml
sctebot_common/i2c_linux/include/i2c_linux/: i2c_linux.h
sctebot_common/i2c_linux/src/: i2c_linux.c  mock_i2c.sh
sctebot_common/sctebot_utils/: CMakeLists.txt  package.xml
sctebot_common/utils/: CMakeLists.txt  package.xml
sctebot_common/utils/include/utils/: boost_logging.h
sctebot_common/utils/src/: boost_logging.cpp
sctebot_control/: CMakeLists.txt  package.xml
sctebot_control/config/: scte_ackermann_controller.yaml  scte_steer_bot_hardware_gazebo.yaml  teleop_asus.config.yaml  teleop_logitechf310.config.yaml
sctebot_control/launch/: sctebot_control.launch  sctebot_localization.launch  sctebot_rqt.launch  sctebot_teleop_joy.launch
sctebot_description/: CMakeLists.txt  package.xml
sctebot_description/launch/: description.launch  sctebot_upload.launch  upload.launch  upload_sctebot.launch
sctebot_description/urdf/: scte_chassis.xacro  scte_inertials.xacro  sctebot_chassis.xacro  sctebot_sensors.xacro  sctebot_wheel.xacro
sctebot_environment/: sctebot_addresses  sctebot_base_environment  sctebot_dev_node_overrides  sctebot_intel_node_overrides  sctebot_raspi_node_overrides
sctebot_gazebo/: CMakeLists.txt  package.xml
sctebot_gazebo/launch/: sctebot_empty_world.launch  sctebot_world.launch  sctebot_world_deprecated.launch
sctebot_gazebo/scripts/: tf_prefixer.py
sctebot_gazebo/worlds/: sctebot.world  sctebot_ksql.world  sctebot_ksql_backup.world  sctebot_yosemite.world
sctebot_gazebo_plugins/: steer_bot_hardware_gazebo
sctebot_hardware/adafruit_servo_hat/: CMakeLists.txt  package.xml
sctebot_hardware/adafruit_servo_hat/include/: adafruit_servo_hat_hw_interface.h
sctebot_hardware/adafruit_servo_hat/launch/: adafruit_servo_hat.launch
sctebot_hardware/adafruit_servo_hat/src/: adafruit_servo_hat.cpp  adafruit_servo_hat.h  adafruit_servo_hat_hw_interface.cpp  adafruit_servo_hat_node.cpp  adafruit_servo_hat_node.h  odometry.cpp  servo_test.sh
sctebot_hardware/adafruit_servo_hat/src/devices/: pca9685.cpp  pca9685.h
sctebot_hardware/sctebot_hardware/: CMakeLists.txt  package.xml
sctebot_localization/: CMakeLists.txt  package.xml
sctebot_localization/config/: ada_10dof_imu_ekf_se_map.yaml  ada_10dof_imu_ekf_se_odom.yaml  ekf_settings.yaml  ekf_state_estimate_map.yaml  ekf_state_estimate_odom.yaml  ekf_state_estimate_odom_map_navsat.yaml  ekf_template.yaml  gazebo_sim_imu_ekf_se_map.yaml  gazebo_sim_imu_ekf_se_odom.yaml  gazebo_sim_navsat_transform.yaml  navsat_transform.yaml  witmotion_gps_ahrs_ekf_se_map.yaml  witmotion_gps_ahrs_ekf_se_odom.yaml  witmotion_gps_ahrs_navsat_transform.yaml  (+3 more)
sctebot_log/: CMakeLists.txt  package.xml
sctebot_navigation/: CMakeLists.txt  package.xml
sctebot_sensors/: realsense-ros  realsense_ros  ydlidar_ros
sctebot_sensors/adafruit_10dof_imu/: CMakeLists.txt  package.xml
sctebot_sensors/adafruit_10dof_imu/launch/: adafruit_10dof_imu.launch
sctebot_sensors/adafruit_10dof_imu/src/: adafruit_10dof_imu.cpp  adafruit_10dof_imu.h  adafruit_10dof_imu_node.cpp
sctebot_sensors/adafruit_10dof_imu/src/common/devices/: bmp180.cpp  bmp180.h  l3gd20.cpp  l3gd20.h  lsm303dlhc.cpp  lsm303dlhc.h
sctebot_sensors/adafruit_10dof_imu/src/common/i2c/: i2c_linux_DEP.c  i2c_linux_DEP.h  mock_i2c.sh
sctebot_sensors/adafruit_10dof_imu/src/devices/: bmp180.cpp  bmp180.h  l3gd20.cpp  l3gd20.h  lsm303dlhc.cpp  lsm303dlhc.h  temp_file.txt
sctebot_slam/: CMakeLists.txt  package.xml
sctebot_viz/: CMakeLists.txt  package.xml
(+181 files in other folders)
