<package format="2">
  <name>adafruit_servo_hat</name>
  <version>0.0.0</version>
  <description>The adafruit_servo_hat package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>utils</depend>
  <depend>i2c_linux</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>

</package>
