<package format="2">
  <name>adafruit_10dof_imu</name>
  <version>0.0.0</version>
  <description>The adafruit_10dof_imu_node package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>i2c_linux</depend>
  <depend>sctebot_utils</depend>

  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>

  <test_depend>rostest</test_depend>
</package>